# online-shop

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
migration/src/: m20220101_000001_create_table.rs
src/: auth.rs  main.rs
src/db/: item.rs  items.rs  mod.rs  prelude.rs  user.rs  users.rs
