[package]
name = "shop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.1.1", features = ["runtime-tokio", "sqlx-postgres", "macros"] }
serde = "1.0.214"
serde_json = "1.0.132"
migration = { path = "migration" }

[workspace]
members = [".", "migration"]