[package]
name = "shop"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.1.1", features = ["runtime-tokio", "sqlx-postgres", "macros"] }
serde = "1.0.214"
serde_json = "1.0.132"
migration = { path = "migration" }
email_address = "0.2.9"
uuid = { version = "1.11.0", features = ["v4"] }
bcrypt = "0.15.1"
log = "0.4.22"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"

[workspace]
members = [".", "migration"]
